# genshin_characters

./: README.md  main.py  pyproject.toml  result.txt
genshin_characters/: __init__.py
